<resources>

    <string name="app_name">MyTeamProject1</string>

    <string name="hint1">아이디</string>
    <string name="hint2">비밀번호</string>
    <string name="loginbtn">로그인</string>
    <string name="joinbtn">회원가입</string>
    <string name="findbtn">아이디/비밀번호 찾기</string>

    <string name="join">회원가입</string>
    <string name="dup">중복확인</string>
    <string name="tel">휴대폰 번호</string>
    <string name="birth">생년월일</string>
    <string name="name">이름</string>
    <string name="menu1">글쓰기</string>

    <string name="findid">아이디 찾기</string>
    <string name="findpwd">비밀번호 찾기</string>
    <string name="hint3">생년월일 </string>
    <string name="hint4">휴대폰 번호</string>
    <string name="back">돌아가기</string>

    <string name="changepwd">새로 변경할 비밀번호</string>
    <string name="hint5">비밀번호 확인</string>
</resources>
