<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffbebe"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/jointitle"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/join"
                android:textSize="45sp" />

            <EditText
                android:id="@+id/inputid"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_below="@+id/jointitle"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="#F0F8FF"
                android:ems="10"
                android:hint="@string/hint1"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/inputid"
                android:layout_above="@id/inputpwd"
                android:text="Button" />


            <EditText
                android:id="@+id/inputpwd"
                android:layout_width="315dp"
                android:layout_height="60dp"
                android:layout_below="@+id/inputid"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="36dp"
                android:background="#F0F8FF"
                android:ems="10"
                android:hint="@string/hint2"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/inputname"
                android:layout_width="315dp"
                android:layout_height="60dp"
                android:layout_below="@+id/inputpwd"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:background="#F0F8FF"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/inputtel"
                android:layout_width="315dp"
                android:layout_height="60dp"
                android:layout_below="@+id/inputname"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:background="#F0F8FF"
                android:ems="10"
                android:hint="@string/tel"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/inputbirth"
                android:layout_width="315dp"
                android:layout_height="60dp"
                android:layout_below="@+id/inputtel"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:background="#F0F8FF"
                android:ems="10"
                android:hint="@string/birth"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/joinbtn2"
                android:layout_width="320dp"
                android:layout_height="71dp"
                android:layout_below="@+id/inputbirth"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="52dp"
                android:layout_marginBottom="36dp"
                android:text="@string/join" />


        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>